@@ -9,6 +9,7 @@
 - fixed [ oval-Bugs-3173470 ] Bug in DigitsCheck
 - fixed [ oval-Bugs-3175737 ] Bug while retrieving profile names from JSR group
 + added convenience constructors to XMLConfigurer for easier Spring-based configuration
++ added support for Spring dependencies being injected into SimpleCheck instances 
 
 2010-11-13 v1.61
 ================
